移除common backend
新增全局convert 讓轉換res簡短